<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:id="@+id/inicialbuscador"
            android:orientation="horizontal"
            android:background="@drawable/mancha_barra"
            >
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_moshtown"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"
                android:contentDescription="@string/ic_mundo_description"/>

        <EditText
            android:id="@+id/editBanda"
            android:layout_width="0dip"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:hint="@string/edit_banda_hint"
            android:layout_gravity="center_vertical"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginLeft="12dp"
            android:textSize="22sp"
            android:singleLine="true"/>

        <ImageButton
                android:id="@+id/buscarBandaButon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_lupa_image"
                android:text="@string/buscar_text"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"
                android:contentDescription="@string/button_lupa_description"/>

        <ImageButton
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_x_image"
                android:layout_gravity="center_vertical|right"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="6dp"
                android:contentDescription="@string/button_x_image_description"/>
    </LinearLayout>

    <ListView
        android:id="@id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:cacheColorHint="#00000000"
        android:layout_weight="1"
        android:divider="@color/gray"
        android:fadingEdge="none">
    </ListView>
    <TextView android:id="@android:id/empty"
              android:layout_width="fill_parent"
              android:layout_height="0dp"
              android:layout_weight="1"
              android:textSize="14sp"
              android:textColor="@color/gray4"
              android:paddingLeft="6dp"
              android:paddingRight="6dp"
              android:text="@string/list_bands_noresults" />

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:orientation="horizontal"
            android:id="@+id/iniciopie"
            android:background="#4d4d4d"
            >
        <ProgressBar
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressbarbandlist"
                android:layout_alignParentLeft="true"
                android:visibility="invisible"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6dp"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_logolastfm"
                android:background="@drawable/button_lastfmbackground"
                android:layout_marginRight="6dp"
                android:contentDescription="@string/button_lastfm_description"
                android:layout_toLeftOf="@+id/button_moshtown"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_moshtown"
                android:background="@drawable/button_moshtownbackground"
                android:layout_marginRight="6dp"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/button_moshtown_description"/>
    </RelativeLayout>
</LinearLayout>

