<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:example="http://schemas.android.com/apk/res/es.concertsapp.android.gui"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/EventLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".EventInfoActivity" >

    <LinearLayout
            android:layout_height="0dp"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
                android:id="@+id/detailedconcertname"
                android:layout_width="fill_parent"
                android:layout_height="22dp"
                android:gravity="center_horizontal"
                android:textColor="@color/gray4"
                android:text="Concierto prueba"
                android:textSize="18sp"
                />
        <es.concertsapp.android.component.LastFmImageView
                android:id="@+id/detailedEventImage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagen_evento"
                example:maxLastFmImageHeight="150"
                android:minHeight="150dp"
                />

        <TextView
                android:id="@+id/eventinfoheader"
                android:layout_height="32dp"
                android:layout_width="fill_parent"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:paddingLeft="12dp"
                android:background="@drawable/barra_estrecha"
                android:text="@string/infoheadertext"/>
        <LinearLayout
                        android:id="@+id/contenteventinfo"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        >
                    <LinearLayout
                            android:layout_height="32dp"
                            android:layout_width="fill_parent"
                            android:orientation="horizontal">
                    <ImageButton
                        android:id="@+id/buttonaddcalendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_calendario"
                        android:onClick="buttonAddCalendar"
                        android:text="@string/calendarbuttontext"
                       />
                    <TextView
                            android:id="@+id/fechaevent"
                            android:layout_height="32dp"
                            android:layout_width="fill_parent"
                            android:textSize="16sp"
                            android:text="FECHA"
                            android:textColor="@color/black"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="12dp"/>
                    </LinearLayout>
                    <LinearLayout
                            android:layout_height="32dp"
                            android:layout_width="fill_parent"
                            android:orientation="horizontal">
                    <ImageButton
                            android:id="@+id/buttonshowmap"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="buttonShowMap"
                            android:background="@drawable/ic_mapa"
                            android:text="@string/mapabuttontext"
                            />
                    <TextView
                            android:id="@+id/mapinfoevent"
                            android:layout_width="fill_parent"
                            android:layout_height="32dp"
                            android:textSize="14sp"
                            android:text="Probando"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="12dp"
                            android:textColor="@color/gray3"
                            />
                    </LinearLayout>
                    <LinearLayout
                            android:layout_height="32dp"
                            android:layout_width="fill_parent"
                            android:orientation="horizontal">
                        <ImageView
                                android:id="@+id/imagetickets"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/ic_tickets"
                                android:layout_below="@+id/buttonaddcalendar"
                                android:contentDescription="@string/ticketimagedescription"/>
                        <TextView
                                android:id="@+id/detailedconcerttickes"
                                android:layout_width="fill_parent"
                                android:layout_height="32dp"
                                android:textSize="14sp"
                                android:text="Probando"
                                android:gravity="center_vertical"
                                android:layout_marginLeft="12dp"
                                android:textColor="@color/gray3"
                                />
                    </LinearLayout>
                </LinearLayout>
                <TextView
                            android:id="@+id/eventbandsheader"
                            android:layout_height="32dp"
                            android:textSize="18sp"
                            android:paddingLeft="12dp"
                            android:textColor="@color/white"
                            android:layout_width="fill_parent"
                            android:background="@drawable/barra_estrecha"
                            android:text="@string/bandsheadertext"/>

                <LinearLayout
                        android:id="@+id/contenteventbands"
                        android:layout_height="fill_parent"
                        android:layout_width="fill_parent"
                        android:orientation="vertical">
                    <ListView
                            android:id="@+id/listbandsevent"
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:divider="@color/gray"
                            android:dividerHeight="0.6dp"
                            android:fadingEdge="none">
                            </ListView>
                </LinearLayout>
    </LinearLayout>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:orientation="horizontal"
            android:id="@+id/iniciopie"
            android:background="#4d4d4d"
            >
        <ProgressBar
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressbarsimilarband"
                android:layout_alignParentLeft="true"
                android:visibility="invisible"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6dp"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_logolastfm"
                android:background="@drawable/button_lastfmbackground"
                android:layout_alignParentRight="true"
                android:layout_marginRight="6dp"
                android:contentDescription="@string/button_lastfm_description"/>
    </RelativeLayout>
</LinearLayout>