<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="#ffffff"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
        >

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:id="@+id/inicialbuscador"
            android:orientation="horizontal"
            android:background="@drawable/fondo_buscador"
            >

        <ImageButton
                android:id="@+id/positionButon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps_button"
                android:background="@drawable/ic_gps_normal"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"/>

        <AutoCompleteTextView
                android:id="@+id/editCiudad"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:saveEnabled="false"
                android:hint="@string/edit_ciudad_hint"
                android:background="#000000"
                android:textColor="#ffffff"
                android:layout_gravity="center_vertical"
                android:dropDownWidth="fill_parent"
                android:layout_weight="1"
                android:layout_marginLeft="12dp"
                android:textSize="22sp"
                android:maxLines="1"/>

        <ImageButton
                android:id="@+id/buscarButon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_lupa"
                android:text="@string/buscar_text"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"/>

        <ImageButton
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_x"
                android:layout_gravity="center_vertical|right"
                android:layout_marginLeft="6dp"/>
    </LinearLayout>

    <ListView
            android:id="@+id/list_main_events"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:cacheColorHint="#00000000"
            android:layout_weight="1"
            >
    </ListView>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:orientation="horizontal"
            android:id="@+id/iniciopie"
            android:background="#4d4d4d"
            >
        <ProgressBar
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressbareventlist"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6dp"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/loadmoreelement"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6dp"
                android:text="¿Quies más? Pincha aquí"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_logolastfm"
                android:background="@drawable/button_lastfmbackground"
                android:layout_alignParentRight="true"
                android:layout_marginRight="6dp"/>
    </RelativeLayout>


</LinearLayout>

